@@ -1,3 +1,14 @@
+2008-12-19  Emmanuele Bassi  <ebassi@gnome.org>
+
+	Bug 454691 – Messages in the gnome-dictionary --help output are
+	not all translated
+
+	* libgdict/gdict-utils.c: Mark debug command line options as
+	translatable.
+
+	* src/gdict-app.c (gdict_init): Fix translation of the command
+	line options. (Gabor Kelemen)
+
 2008-12-15  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/gdict-applet.c: (gdict_applet_cmd_help),
